Remove unnecessary codes
1. Remove unused codes
2. updated README.md
3. Updated code with warning